--- a/src/content/members/faculty.yaml
+++ b/src/content/members/faculty.yaml
@@ -5,27 +5,39 @@ items:
     role: "教授"
     roleEn: "Professor"
     id: "sakata"
-    image: "/images/sample_avatar.svg"
-    description: "東京大学大学院工学系研究科 教授。専門は技術経営、イノベーション政策、ネットワーク科学。"
+    image: "/images/members/sakata.jpg"
+    description: "技術経営の新しい手法を提唱し、経営変革を促すとともに、アントレプレナーの育成を行っています。"
+    location: "工学部3号館201号室"
+    researchAreas: "テクノロジー・インフォマテックス、複雑系ネットワーク解析、科学技術政策"
+    courses: "科学技術産業政策論（社会システム設計論）、Advanced Tech Management、ディープテック起業実践演習、ディープテック起業家への招待"
   - avatar: "森"
     name: "森 純一郎"
     role: "教授（兼担）"
     roleEn: "Professor"
     id: "mori"
-    image: "/images/sample_avatar.svg"
-    description: "東京大学情報基盤センター 教授。専門はウェブマイニング、知識構造化、学術データ解析。"
+    image: "/images/members/mori.png"
+    description: "グラフを用いたデータマイニング、ソーシャルネットワーク分析、表現学習について研究を行っています。"
+    location: "情報理工学系研究科 兼務"
+    researchAreas: "人工知能、特にユーザーモデリング、情報抽出、ソーシャルネットワーク分析"
+    courses: "Quantitative Methods for Management and Policy Analysis"
   - avatar: "浅"
     name: "浅谷 公威"
     role: "特任准教授"
     roleEn: "Project Associate Professor"
     id: "asatani"
-    image: "/images/sample_avatar.svg"
-    description: "東京大学大学院工学系研究科 特任准教授。専門は計算社会科学、ネットワーク科学。"
+    image: "/images/members/asatani.jpg"
+    description: "複雑ネットワークや自然言語処理の手法を用いて社会データの解析を行っています。"
+    location: "工学部8号館629号室"
+    researchAreas: "計算社会科学、複雑ネットワーク、サイエンスオブサイエンス"
+    courses: "計算社会科学, Quantitative Methods for Management and Policy Analysis"
   - avatar: "西"
     name: "西本 恵太"
     role: "特任講師"
     roleEn: "Project Lecturer"
     id: "nishimoto"
-    image: "/images/sample_avatar.jpg"
-    description: "東京大学大学院工学系研究科 特任講師。専門は科学計量学、データ分析。"
+    image: "/images/members/nishimoto.png"
+    description: "複雑系のシミュレーションおよびScience of Scienceに関するデータ分析を行っています。"
+    location: "工学部3号館307号室"
+    researchAreas: "マルチエージェントシミュレーション・顧客行動解析・Science of Science・Artificial Life"
+    courses: "基礎プロジェクト（演習箇所）"
 order: 1
