--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "predeploy": "GITHUB_PAGES=true npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "astro": "^5.16.2"
   },
   "devDependencies": {
-    "@rollup/plugin-yaml": "^4.1.2"
+    "@rollup/plugin-yaml": "^4.1.2",
+    "gh-pages": "^6.3.0"
   }
 }
