--- a/src/content/research-focus/focus5.yaml
+++ b/src/content/research-focus/focus5.yaml
@@ -1,3 +1,5 @@
 title: "Dense and influential core promotion of daily viral information spread in political echo chambers"
 description: "Twitterの政治的エコーチャンバーにおいて効率的な情報拡散が行われている過程を明らかにしました。"
 order: 5
+
+image: "/lab_guidelines_insight.png"
