--- a/src/content/activity/20230723_01.yaml
+++ b/src/content/activity/20230723_01.yaml
@@ -2,3 +2,5 @@ date: "2023-07-23"
 title: "PICMET 2023 参加報告"
 description: "経営工学分野のトップカンファレンスである国際会議PICMET 2023がメキシコのモンテレイで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/picmet-2023-参加報告"
+
+image: "/lab_guidelines_insight.png"
