--- a/src/content/research-focus/focus2.yaml
+++ b/src/content/research-focus/focus2.yaml
@@ -2,3 +2,5 @@ title: "Scientific Attention to Sustainability and SDGs: Meta-Analysis of Academ
 description: "サスティナビリティに関する学術文献がSDGsに対しどのような関心を持っているかを、30万件の書誌情報より明らかにしました。"
 order: 2
 label: "Research"
+
+image: "/lab_guidelines_insight.png"
