--- a/src/content/activity/20220807_01.yaml
+++ b/src/content/activity/20220807_01.yaml
@@ -1,6 +1,8 @@
 date: "2022-08-07"
 title: "PICMET 2022参加報告"
 description: "経営工学分野のトップカンファレンスである国際会議PICMET 2022がアメリカのポートランドで開催されました。"
+description_ja: "経営工学分野のトップカンファレンスである国際会議PICMET 2022がアメリカのポートランドで開催されました。"
+description_en: "経営工学分野のトップカンファレンスである国際会議PICMET 2022がアメリカのポートランドで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/picmet-2022参加報告"
 
 image: "/lab_guidelines_insight.png"
