--- a/src/content/activity/20230626_01.yaml
+++ b/src/content/activity/20230626_01.yaml
@@ -1,6 +1,8 @@
 date: "2023-06-26"
 title: "ICSSI 2023 参加報告"
 description: "Science of science分野のトップカンファレンスである国際会議ICSSI 2023がアメリカのエヴァンストンで開催されました。"
+description_ja: "Science of science分野のトップカンファレンスである国際会議ICSSI 2023がアメリカのエヴァンストンで開催されました。"
+description_en: "Science of science分野のトップカンファレンスである国際会議ICSSI 2023がアメリカのエヴァンストンで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/icssi-2023-参加報告"
 
 image: "/lab_guidelines_insight.png"
