--- a/src/content/activity/20240701_01.yaml
+++ b/src/content/activity/20240701_01.yaml
@@ -1,6 +1,8 @@
 date: "2024-07-01"
 title: "ICSSI 2024 参加報告"
 description: "ICSSI (International Conference on the Science of Science & Innovation) は、Science of Scienceの代表的なカンファレンスです。今年はワシントンD.C.米国科学アカデミにて7月1日から3日にかけて開催されました。"
+description_ja: "ICSSI (International Conference on the Science of Science & Innovation) は、Science of Scienceの代表的なカンファレンスです。今年はワシントンD.C.米国科学アカデミにて7月1日から3日にかけて開催されました。"
+description_en: "ICSSI (International Conference on the Science of Science & Innovation) は、Science of Scienceの代表的なカンファレンスです。今年はワシントンD.C.米国科学アカデミにて7月1日から3日にかけて開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/icssi-2024-参加報告"
 
 image: "/lab_guidelines_insight.png"
