--- a/src/content/members/staff.yaml
+++ b/src/content/members/staff.yaml
@@ -7,10 +7,14 @@ items:
     roleEn: "Project Researcher"
     image: "/images/sample_avatar.svg"
     description: "専門は..."
+    description_ja: "専門は..."
+    description_en: "専門は..."
   - avatar: "磯"
     name: "磯沼 大"
     role: "特任研究員"
     roleEn: "Project Researcher"
-    image: "/images/sample_avatar.jpg"
+    image: "/images/sample_avatar.svg"
     description: "専門は..."
+    description_ja: "専門は..."
+    description_en: "専門は..."
 order: 1.5
