--- a/src/content/research-focus/focus3.yaml
+++ b/src/content/research-focus/focus3.yaml
@@ -1,5 +1,7 @@
 title: "Large-scale analysis of delayed recognition using sleeping beauty and the prince"
 description: "長い間注目されなかった論文であるSleeping Beautyとそのきっかけとなる論文であるPrinceを大規模に取得し、その特徴を明らかにしました。非連続な発見は遠い分野間だけではなく、近くの分野の見落としにも多く存在していることがわかりました。"
+description_ja: "長い間注目されなかった論文であるSleeping Beautyとそのきっかけとなる論文であるPrinceを大規模に取得し、その特徴を明らかにしました。非連続な発見は遠い分野間だけではなく、近くの分野の見落としにも多く存在していることがわかりました。"
+description_en: "長い間注目されなかった論文であるSleeping Beautyとそのきっかけとなる論文であるPrinceを大規模に取得し、その特徴を明らかにしました。非連続な発見は遠い分野間だけではなく、近くの分野の見落としにも多く存在していることがわかりました。"
 order: 3
 label: "Project"
 
