--- a/src/content/research-focus/focus4.yaml
+++ b/src/content/research-focus/focus4.yaml
@@ -1,5 +1,7 @@
 title: "Evaluating Nodes of Latent Mediators in Heterogeneous Communities"
 description: "異質なコミュニティをつなぐ結節点(ノード)を検出する新しいネットワーク指標(PW)を提案"
+description_ja: "異質なコミュニティをつなぐ結節点(ノード)を検出する新しいネットワーク指標(PW)を提案"
+description_en: "異質なコミュニティをつなぐ結節点(ノード)を検出する新しいネットワーク指標(PW)を提案"
 order: 4
 
 image: "/lab_guidelines_insight.png"
