--- a/src/content/activity/20230702_01.yaml
+++ b/src/content/activity/20230702_01.yaml
@@ -1,6 +1,8 @@
 date: "2023-07-02"
 title: "ISSI 2023 参加報告"
 description: "科学計量学分野で最大の学会である国際会議ISSI 2023がアメリカのインディアナで開催されました。"
+description_ja: "科学計量学分野で最大の学会である国際会議ISSI 2023がアメリカのインディアナで開催されました。"
+description_en: "科学計量学分野で最大の学会である国際会議ISSI 2023がアメリカのインディアナで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/issi-2023-参加報告"
 
 image: "/lab_guidelines_insight.png"
