--- a/src/content/activity/20230709_01.yaml
+++ b/src/content/activity/20230709_01.yaml
@@ -1,6 +1,8 @@
 date: "2023-07-09"
 title: "ACL2023 参加報告"
 description: "計算言語学分野のトップカンファレンスであるACL2023がカナダ・トロントで開催され、発表を行いました。"
+description_ja: "計算言語学分野のトップカンファレンスであるACL2023がカナダ・トロントで開催され、発表を行いました。"
+description_en: "計算言語学分野のトップカンファレンスであるACL2023がカナダ・トロントで開催され、発表を行いました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/acl2023-参加報告"
 
 image: "/lab_guidelines_insight.png"
