--- a/src/content/activity/20231114_01.yaml
+++ b/src/content/activity/20231114_01.yaml
@@ -1,9 +1,12 @@
 date: "2023-11-14"
-title: "Complex Networks 2023 参加   "
+title: "Complex Networks 2023 参加"
+title_ja: "Complex Networks 2023 参加"
+title_en: "Participation in Complex Networks 2023"
 description: "複雑ネットワーク分野では最大級の学会の1つであるComplex Networks 2023がフランスのマントンで開催されました。"
 description_ja: "複雑ネットワーク分野では最大級の学会の1つであるComplex Networks 2023がフランスのマントンで開催されました。"
-description_en: "複雑ネットワーク分野では最大級の学会の1つであるComplex Networks 2023がフランスのマントンで開催されました。"
+description_en: "Complex Networks 2023, one of the largest conferences in the field of complex networks, was held in Menton, France."
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/complex-networks-2023-参加報告"
 
 image: "/lab_guidelines_insight.png"
 description_short: "複雑ネットワーク分野では最大級の学会の1つであるComplex Networks 2023がフランスのマントンで開催されました。"
+description_short_en: "Complex Networks 2023, one of the largest conferences in the field, was held in Menton, France."
