--- a/src/content/members/collaborators.yaml
+++ b/src/content/members/collaborators.yaml
@@ -3,26 +3,42 @@ titleEn: "Collaborators / Academic Staff"
 items:
   - avatar: "杉"
     name: "杉山 昌広"
+    nameEn: "Masahiro Sugiyama"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "佐"
     name: "佐々木 一"
+    nameEn: "Hajime Sasaki"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "山"
     name: "山野 泰子"
+    nameEn: "Yasuko Yamano"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "榊"
     name: "榊 剛史"
+    nameEn: "Takeshi Sakaki"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "鳥"
     name: "鳥越 邦和"
+    nameEn: "Kunikazu Torigoe"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "前"
     name: "前田 高志 ニコラス"
+    nameEn: "Nicholas Takashi Maeda"
     role: "協力研究者"
+    roleEn: "Collaborator"
   - avatar: "石"
     name: "石原 絢"
+    nameEn: "Aya Ishihara"
     role: "学術専門職員"
+    roleEn: "Academic Staff"
   - avatar: "佐"
     name: "佐藤 妙子"
+    nameEn: "Taeko Sato"
     role: "学術専門職員"
+    roleEn: "Academic Staff"
 order: 5
