--- a/src/content/members/doctoral.yaml
+++ b/src/content/members/doctoral.yaml
@@ -1,20 +1,28 @@
 title: "博士課程"
-titleEn: "Doctoral"
+titleEn: "Doctoral Students"
 items:
   - avatar: "D4"
     name: "工藤 祥浩"
+    nameEn: "Yoshihiro Kudo"
   - avatar: "D4"
     name: "近藤 芳朗"
+    nameEn: "Yoshiro Kondo"
   - avatar: "D4"
     name: "東出 紀之"
+    nameEn: "Noriyuki Higashide"
   - avatar: "D4"
     name: "熊代 嗣生"
+    nameEn: "Tsuguo Kumashiro"
   - avatar: "D2"
     name: "三浦 千哲"
+    nameEn: "Chiaki Miura"
   - avatar: "D2"
     name: "Rikuei Kaku"
+    nameEn: "Rikuei Kaku"
   - avatar: "D1"
     name: "盧 慧敏"
+    nameEn: "Huimin Lu"
   - avatar: "D1"
     name: "佐藤 圭吾"
+    nameEn: "Keigo Sato"
 order: 2
