--- a/src/content/members/faculty.yaml
+++ b/src/content/members/faculty.yaml
@@ -1,43 +1,64 @@
 title: "教員"
+titleEn: "Professors"
 items:
   - avatar: "坂"
     name: "坂田 一郎"
+    nameEn: "Ichiro Sakata"
     role: "教授"
     roleEn: "Professor"
     id: "sakata"
     image: "/images/members/sakata.jpg"
     description: "技術経営の新しい手法を提唱し、経営変革を促すとともに、アントレプレナーの育成を行っています。"
+    descriptionEn: "Proposing new approaches to technology management, driving business transformation, and nurturing entrepreneurs."
     location: "工学部3号館201号室"
+    locationEn: "Engineering Bldg. 3, Room 201"
     researchAreas: "テクノロジー・インフォマテックス、複雑系ネットワーク解析、科学技術政策"
+    researchAreasEn: "Technology Informatics, Complex Network Analysis, Science and Technology Policy"
     courses: "科学技術産業政策論（社会システム設計論）、Advanced Tech Management、ディープテック起業実践演習、ディープテック起業家への招待"
+    coursesEn: "Science, Technology and Industrial Policy, Advanced Tech Management, Deep Tech Entrepreneurship Practice, Introduction to Deep Tech Entrepreneurs"
   - avatar: "森"
     name: "森 純一郎"
+    nameEn: "Junichiro Mori"
     role: "教授（兼担）"
-    roleEn: "Professor"
+    roleEn: "Professor (Joint Appointment)"
     id: "mori"
     image: "/images/members/mori.png"
     description: "グラフを用いたデータマイニング、ソーシャルネットワーク分析、表現学習について研究を行っています。"
+    descriptionEn: "Conducting research on graph-based data mining, social network analysis, and representation learning."
     location: "情報理工学系研究科 兼務"
+    locationEn: "Joint appointment with Graduate School of Information Science and Technology"
     researchAreas: "人工知能、特にユーザーモデリング、情報抽出、ソーシャルネットワーク分析"
+    researchAreasEn: "Artificial Intelligence, especially User Modeling, Information Extraction, Social Network Analysis"
     courses: "Quantitative Methods for Management and Policy Analysis"
+    coursesEn: "Quantitative Methods for Management and Policy Analysis"
   - avatar: "浅"
     name: "浅谷 公威"
+    nameEn: "Kimitaka Asatani"
     role: "特任准教授"
     roleEn: "Project Associate Professor"
     id: "asatani"
     image: "/images/members/asatani.jpg"
     description: "複雑ネットワークや自然言語処理の手法を用いて社会データの解析を行っています。"
+    descriptionEn: "Analyzing social data using complex network and natural language processing methods."
     location: "工学部8号館629号室"
+    locationEn: "Engineering Bldg. 8, Room 629"
     researchAreas: "計算社会科学、複雑ネットワーク、サイエンスオブサイエンス"
+    researchAreasEn: "Computational Social Science, Complex Networks, Science of Science"
     courses: "計算社会科学, Quantitative Methods for Management and Policy Analysis"
+    coursesEn: "Computational Social Science, Quantitative Methods for Management and Policy Analysis"
   - avatar: "西"
     name: "西本 恵太"
+    nameEn: "Keita Nishimoto"
     role: "特任講師"
     roleEn: "Project Lecturer"
     id: "nishimoto"
     image: "/images/members/nishimoto.png"
     description: "複雑系のシミュレーションおよびScience of Scienceに関するデータ分析を行っています。"
+    descriptionEn: "Conducting complex systems simulation and data analysis related to Science of Science."
     location: "工学部3号館307号室"
+    locationEn: "Engineering Bldg. 3, Room 307"
     researchAreas: "マルチエージェントシミュレーション・顧客行動解析・Science of Science・Artificial Life"
+    researchAreasEn: "Multi-Agent Simulation, Customer Behavior Analysis, Science of Science, Artificial Life"
     courses: "基礎プロジェクト（演習箇所）"
+    coursesEn: "Basic Project (Practice Section)"
 order: 1
