--- a/src/content/members/masters.yaml
+++ b/src/content/members/masters.yaml
@@ -1,36 +1,52 @@
 title: "修士課程"
-titleEn: "Master's"
+titleEn: "Master's Students"
 items:
   - avatar: "M2"
     name: "李 佳穎 (Chia Yiing Lee)"
+    nameEn: "Chia Yiing Lee"
   - avatar: "M2"
     name: "岸本 駿"
+    nameEn: "Shun Kishimoto"
   - avatar: "M2"
     name: "種谷 直哉"
+    nameEn: "Naoya Tanetani"
   - avatar: "M2"
     name: "原田 啓矢"
+    nameEn: "Keiya Harada"
   - avatar: "M2"
     name: "小作 貴司"
+    nameEn: "Takashi Kosaku"
   - avatar: "M2"
     name: "尾藤 実伽子"
+    nameEn: "Mikako Bito"
   - avatar: "M2"
     name: "李 兆祺"
+    nameEn: "Zhaoqi Li"
   - avatar: "M2"
     name: "久保 春喜"
+    nameEn: "Haruki Kubo"
   - avatar: "M2"
     name: "吉本 匠"
+    nameEn: "Takumi Yoshimoto"
   - avatar: "M1"
     name: "宇都宮 智"
+    nameEn: "Satoshi Utsunomiya"
   - avatar: "M1"
     name: "陳 啓賢"
+    nameEn: "Qixian Chen"
   - avatar: "M1"
     name: "三留 圭人"
+    nameEn: "Keito Mitome"
   - avatar: "M1"
     name: "榊原 陽介"
+    nameEn: "Yosuke Sakakibara"
   - avatar: "M1"
     name: "梅田 懐"
+    nameEn: "Kai Umeda"
   - avatar: "M1"
     name: "倉橋 優志"
+    nameEn: "Yushi Kurahashi"
   - avatar: "M1"
     name: "高田 賢太"
+    nameEn: "Kenta Takada"
 order: 3
