--- a/src/content/members/staff.yaml
+++ b/src/content/members/staff.yaml
@@ -3,18 +3,18 @@ titleEn: "Staff"
 items:
   - avatar: "大"
     name: "大知 正直"
+    nameEn: "Masanao Ochi"
     role: "特任研究員"
     roleEn: "Project Researcher"
     image: "/images/sample_avatar.svg"
     description: "専門は..."
-    description_ja: "専門は..."
-    description_en: "専門は..."
+    descriptionEn: "Specializes in..."
   - avatar: "磯"
     name: "磯沼 大"
+    nameEn: "Dai Isonuma"
     role: "特任研究員"
     roleEn: "Project Researcher"
     image: "/images/sample_avatar.svg"
     description: "専門は..."
-    description_ja: "専門は..."
-    description_en: "専門は..."
+    descriptionEn: "Specializes in..."
 order: 1.5
