--- a/src/content/members/undergrad.yaml
+++ b/src/content/members/undergrad.yaml
@@ -3,11 +3,16 @@ titleEn: "Undergraduate / Others"
 items:
   - avatar: "B4"
     name: "高羽 真緒"
+    nameEn: "Mao Takaha"
   - avatar: "B4"
     name: "千福 浩平"
+    nameEn: "Kohei Senfuku"
   - avatar: "B4"
     name: "浅田 稜介"
+    nameEn: "Ryosuke Asada"
   - avatar: "Ex"
     name: "PONCET LUCAS"
+    nameEn: "Lucas Poncet"
     role: "交換留学生"
+    roleEn: "Exchange Student"
 order: 4
