--- a/src/data/news.yaml
+++ b/src/data/news.yaml
@@ -1,5 +1,10 @@
 - date: "2025.11"
   text: "LLMエージェントを用いたAI研究自動化コンペティション \"Kaggle of Kaggle\" を開催予定です。"
+- date: "2025.10"
+  text: "国際学会 Ubicomp 2025にて修士2年の種谷が発表しました。発表題目：\"Estimating Transfer Costs from Real Human Mobility Data in Urban Transit\" "
+- date: "2025.09"
+  text: "特任准教授の浅谷が科学技術に関する調査プロジェクト2025シンポジウムに登壇します。"
+  link: "https://www.ndl.go.jp/jp/event/events/2025kagiprosymposium.html"
 - date: "2025.07"
   text: "翻訳書『サイエンス・オブ・サイエンス』を出版しました。"
   link: "https://www.morikita.co.jp/books/mid/097541"
