--- a/src/data/news.yaml
+++ b/src/data/news.yaml
@@ -3,6 +3,8 @@
 - date: "2025.10"
   text: "国際学会 Ubicomp 2025にて修士2年の種谷が発表しました。発表題目：\"Estimating Transfer Costs from Real Human Mobility Data in Urban Transit\" "
 - date: "2025.09"
+  text: "博士過程の東出さんが博士号（工学）を取得されました。"
+- date: "2025.09"
   text: "特任准教授の浅谷が科学技術に関する調査プロジェクト2025シンポジウムに登壇します。"
   link: "https://www.ndl.go.jp/jp/event/events/2025kagiprosymposium.html"
 - date: "2025.07"
