--- a/src/content/activity/20220719_01.yaml
+++ b/src/content/activity/20220719_01.yaml
@@ -5,4 +5,4 @@ description_ja: "計算社会科学分野のトップカンファレンスであ
 description_en: "計算社会科学分野のトップカンファレンスである国際会議IC2s2 2022がアメリカのシカゴで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/ic2s2-2022参加報告"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
