--- a/src/content/activity/20220807_01.yaml
+++ b/src/content/activity/20220807_01.yaml
@@ -5,4 +5,4 @@ description_ja: "経営工学分野のトップカンファレンスである国
 description_en: "経営工学分野のトップカンファレンスである国際会議PICMET 2022がアメリカのポートランドで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/picmet-2022参加報告"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
