--- a/src/content/activity/20230709_01.yaml
+++ b/src/content/activity/20230709_01.yaml
@@ -5,4 +5,4 @@ description_ja: "計算言語学分野のトップカンファレンスである
 description_en: "計算言語学分野のトップカンファレンスであるACL2023がカナダ・トロントで開催され、発表を行いました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/acl2023-参加報告"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
