--- a/src/content/research-focus/focus2.yaml
+++ b/src/content/research-focus/focus2.yaml
@@ -7,6 +7,6 @@ description_en: "We analyzed 300,000 bibliographic records to reveal how sustain
 order: 2
 label: "Research"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
 description_short: "サスティナビリティに関する学術文献がSDGsに対しどのような関心を持っているかを分析"
 description_short_en: "Analyzing how sustainability literature addresses the SDGs"
