--- a/src/content/research-focus/focus3.yaml
+++ b/src/content/research-focus/focus3.yaml
@@ -5,4 +5,4 @@ description_en: "長い間注目されなかった論文であるSleeping Beauty
 order: 3
 label: "Project"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
