--- a/src/content/research-focus/focus6.yaml
+++ b/src/content/research-focus/focus6.yaml
@@ -4,4 +4,4 @@ description_ja: "木構造上のトピックから各トピックに関する要
 description_en: "木構造上のトピックから各トピックに関する要約文を生成する教師なし要約手法を提案"
 order: 6
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
