--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "astro": "^5.16.2"
+    "astro": "^5.16.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.2",
