--- a/src/content/activity/20220711_01.yaml
+++ b/src/content/activity/20220711_01.yaml
@@ -3,4 +3,4 @@ title: "CS32022 参加報告"
 description: "科学計量学分野のトップ研究者が開催するサマースクールのCS3がオランダのライデン大学で開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/cs32022-参加報告"
 
-image: "/lab_guidelines_insight.png"
+image: "/lab_guidelines_insight.webp"
