--- a/src/content/members/faculty.yaml
+++ b/src/content/members/faculty.yaml
@@ -7,7 +7,7 @@ items:
     role: "教授"
     roleEn: "Professor"
     id: "sakata"
-    image: "/images/members/sakata.jpg"
+    image: "/images/members/sakata.webp"
     description: "技術経営の新しい手法を提唱し、経営変革を促すとともに、アントレプレナーの育成を行っています。"
     descriptionEn: "Proposing new approaches to technology management, driving business transformation, and nurturing entrepreneurs."
     location: "工学部3号館201号室"
@@ -22,7 +22,7 @@ items:
     role: "教授（兼担）"
     roleEn: "Professor (Joint Appointment)"
     id: "mori"
-    image: "/images/members/mori.png"
+    image: "/images/members/mori.webp"
     description: "グラフを用いたデータマイニング、ソーシャルネットワーク分析、表現学習について研究を行っています。"
     descriptionEn: "Conducting research on graph-based data mining, social network analysis, and representation learning."
     location: "情報理工学系研究科 兼務"
@@ -37,7 +37,7 @@ items:
     role: "特任准教授"
     roleEn: "Project Associate Professor"
     id: "asatani"
-    image: "/images/members/asatani.jpg"
+    image: "/images/members/asatani.webp"
     description: "複雑ネットワークや自然言語処理の手法を用いて社会データの解析を行っています。"
     descriptionEn: "Analyzing social data using complex network and natural language processing methods."
     location: "工学部8号館629号室"
@@ -52,7 +52,7 @@ items:
     role: "特任講師"
     roleEn: "Project Lecturer"
     id: "nishimoto"
-    image: "/images/members/nishimoto.png"
+    image: "/images/members/nishimoto.webp"
     description: "複雑系のシミュレーションおよびScience of Scienceに関するデータ分析を行っています。"
     descriptionEn: "Conducting complex systems simulation and data analysis related to Science of Science."
     location: "工学部3号館307号室"
