--- a/src/content/activity/20230626_01.yaml
+++ b/src/content/activity/20230626_01.yaml
@@ -5,4 +5,4 @@ description_ja: "Science of science分野のトップカンファレンスであ
 description_en: "Science of science分野のトップカンファレンスである国際会議ICSSI 2023がアメリカのエヴァンストンで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/icssi-2023-参加報告"
 
-image: "/lab_guidelines_insight.webp"
+image: "/images/sample_avatar.avif"
