--- a/src/content/activity/20230702_01.yaml
+++ b/src/content/activity/20230702_01.yaml
@@ -5,4 +5,4 @@ description_ja: "科学計量学分野で最大の学会である国際会議ISS
 description_en: "科学計量学分野で最大の学会である国際会議ISSI 2023がアメリカのインディアナで開催されました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/issi-2023-参加報告"
 
-image: "/lab_guidelines_insight.webp"
+image: "/images/sample_avatar.avif"
