--- a/src/content/activity/20240529_01.yaml
+++ b/src/content/activity/20240529_01.yaml
@@ -5,4 +5,4 @@ description_ja: "2024年度 第38回人工知能学会 (JSAI) が浜松で開催
 description_en: "2024年度 第38回人工知能学会 (JSAI) が浜松で開催されました。本研究室からは、3人がオーガナイズドセッションにて、1人がポスターセッションにて、発表を行いました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/jsai-2024-参加報告"
 
-image: "/lab_guidelines_insight.webp"
+image: "/images/sample_avatar.avif"
