--- a/src/content/activity/20241210_01.yaml
+++ b/src/content/activity/20241210_01.yaml
@@ -3,4 +3,4 @@ title: "Complex Networks 2024 参加報告"
 description: "2024年12月10日から12月12日にかけて、トルコ・イスタンブールにて国際会議「Complex Networks 2024 (The 13th International Conference on Complex Networks and their Applications)」が開催されました。"
 description_ja: "2024年12月10日から12月12日にかけて、トルコ・イスタンブールにて国際会議「Complex Networks 2024 (The 13th International Conference on Complex Networks and their Applications)」が開催されました。"
 description_en: "2024年12月10日から12月12日にかけて、トルコ・イスタンブールにて国際会議「Complex Networks 2024 (The 13th International Conference on Complex Networks and their Applications)」が開催されました。"
-image: "/lab_guidelines_insight.webp"
+image: "/images/sample_avatar.avif"
