--- a/src/content/activity/20250610_01.yaml
+++ b/src/content/activity/20250610_01.yaml
@@ -5,4 +5,4 @@ description_ja: "ICSSI2025がコペンハーゲンで開催されました。本
 description_en: "ICSSI2025がコペンハーゲンで開催されました。本会議はScience of Science分野におけるトップ会議として位置づけられており、坂田・森・浅谷・西本研究室からは5名が参加し、関係者との活発な交流と議論を行いました。"
 link: "https://sakatalab.t.u-tokyo.ac.jp/courses/icssi2025-コペンハーゲン会議報告"
 
-image: "/lab_guidelines_insight.webp"
+image: "/images/sample_avatar.avif"
