Add alumni list and enable scrolling for alumni section, and modified some spells and pronounciations

--- a/src/content/members/collaborators.yaml
+++ b/src/content/members/collaborators.yaml
@@ -13,7 +13,7 @@ items:
     roleEn: "Collaborator"
   - avatar: "山"
     name: "山野 泰子"
-    nameEn: "Yasuko Yamano"
+    nameEn: "Hiroko Yamano"
     role: "協力研究者"
     roleEn: "Collaborator"
   - avatar: "榊"
@@ -23,7 +23,7 @@ items:
     roleEn: "Collaborator"
   - avatar: "鳥"
     name: "鳥越 邦和"
-    nameEn: "Kunikazu Torigoe"
+    nameEn: "Kunikazu Torikoshi"
     role: "協力研究者"
     roleEn: "Collaborator"
   - avatar: "前"
