--- a/src/content/members/masters.yaml
+++ b/src/content/members/masters.yaml
@@ -12,7 +12,7 @@ items:
     nameEn: "Naoya Tanetani"
   - avatar: "M2"
     name: "原田 啓矢"
-    nameEn: "Keiya Harada"
+    nameEn: "Hiroya Harada"
   - avatar: "M2"
     name: "小作 貴司"
     nameEn: "Takashi Kosaku"
@@ -24,7 +24,7 @@ items:
     nameEn: "Zhaoqi Li"
   - avatar: "M2"
     name: "久保 春喜"
-    nameEn: "Haruki Kubo"
+    nameEn: "Harunobu Kubo"
   - avatar: "M2"
     name: "吉本 匠"
     nameEn: "Takumi Yoshimoto"
@@ -45,7 +45,7 @@ items:
     nameEn: "Kai Umeda"
   - avatar: "M1"
     name: "倉橋 優志"
-    nameEn: "Yushi Kurahashi"
+    nameEn: "Yuji Kurahashi"
   - avatar: "M1"
     name: "高田 賢太"
     nameEn: "Kenta Takada"
