--- a/src/content/members/staff.yaml
+++ b/src/content/members/staff.yaml
@@ -11,7 +11,7 @@ items:
     descriptionEn: "Specializes in..."
   - avatar: "磯"
     name: "磯沼 大"
-    nameEn: "Dai Isonuma"
+    nameEn: "Masaru Isonuma"
     role: "客員研究員"
     roleEn: "Project Researcher"
     # image: "/images/sample_avatar.svg"
