--- a/src/content/members/undergrad.yaml
+++ b/src/content/members/undergrad.yaml
@@ -6,7 +6,7 @@ items:
     nameEn: "Mao Takaha"
   - avatar: "B4"
     name: "千福 浩平"
-    nameEn: "Kohei Senfuku"
+    nameEn: "Kohei Senbuku"
   - avatar: "B4"
     name: "浅田 稜介"
     nameEn: "Ryosuke Asada"
